--- a/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
@@ -13,13 +13,7 @@
     <section class="khung-chuc-nang-lct" style="top: 2px; right: 2px;">
         <ul data-doi-tuong="cncd-@Model.ma">
             <li>
-                <a data-chuc-nang="#">abc</a>
-            </li>
-            <li>
-                <a data-chuc-nang="#">abc</a>
-            </li>
-            <li>
-                <a data-chuc-nang="#">abc</a>
+                <a data-chuc-nang="xoa">Xóa chủ đề</a>
             </li>
         </ul>
         <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cncd-@Model.ma">
