--- a/LCTMoodle/Views/KhoaHoc/_Khung.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/_Khung.cshtml
@@ -17,7 +17,7 @@
             {
                 <li class="khung-nhom">
                     <section class="ten-nhom">
-                        <a href="javascript:void(0)" data-chuc-nang="hien-thi" data-value="baigiang">Bài giảng</a>
+                        <a data-chuc-nang="hien-thi" data-value="baigiang">Bài giảng</a>
                     </section>
                     <section class="khung-danh-sach-bai-viet">
                         <ul class="danh-sach-bai-viet">
@@ -62,7 +62,7 @@
             {
                 <li class="khung-nhom">
                     <section class="ten-nhom">
-                        <a href="javascript:void(0)" data-chuc-nang="hien-thi" data-value="baitap">Bài tập</a>
+                        <a data-chuc-nang="hien-thi" data-value="baitap">Bài tập</a>
                     </section>
                     <section class="khung-danh-sach-bai-viet">
                         <ul class="danh-sach-bai-viet">
@@ -107,7 +107,7 @@
             {
                 <li class="khung-nhom">
                     <section class="ten-nhom">
-                        <a href="javascript:void(0)" data-chuc-nang="hien-thi" data-value="diendan">Diễn đàn</a>
+                        <a data-chuc-nang="hien-thi" data-value="diendan">Diễn đàn</a>
                     </section>
                     <section class="khung-danh-sach-bai-viet">
                         <ul class="danh-sach-bai-viet">
