--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -364,7 +364,7 @@ body.khong-scroll {
             display: inline-block;
             max-width: 90vw;
             max-height: 90vh;
-            background-color: #fff;
+            background-color: #f5f5f5;
             padding: 5px;
             border: 1px solid #ddd;
             position: relative;
