--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -14,7 +14,7 @@
     <section class="tieu-de">
         Quản lý chủ đề
     </section>
-    <section id="khung_quan_ly" class="noi-dung lct-cay" data-value="">
+    <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma data-pham-vi>
         <section class="cay">
             <ul id="khung_cay" class="nut">
                 @Html.Partial("~/Views/ChuDe/Khung/_Cay_HeThong_Item.cshtml", Data.PhamVi.layDanhSach())
@@ -32,10 +32,10 @@
         <section class="khung-chuc-nang">
             <ul>
                 <li>
-                    <a href="javascript:void(0)" class="pe-7s-tools"></a>
+                    <a class="pe-7s-tools"></a>
                 </li>
                 <li>
-                    <a href="javascript:void(0)" data-chuc-nang="tao" class="pe-7s-plus">
+                    <a data-chuc-nang="tao" class="pe-7s-plus">
                         <u></u>
                     </a>
                 </li>
