--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -1,7 +1,10 @@
 ﻿<article class="hop hop-1-vien">
+    <section class="tieu-de">
+        Tạo chủ đề
+    </section>
     <form id="tao_chu_de_form" class="noi-dung lct-form">
-        <input type="hidden" name="ChuDeCha" value="@ViewData["MaChuDeCha"]" />
         <input type="hidden" name="PhamVi" value="@ViewData["PhamVi"]" />
+        <input type="hidden" name="ChuDeCha" value="@ViewData["MaChuDeCha"]" />
         <ul>
             <li>
                 <section class="tieu-de">
