--- a/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
@@ -7,9 +7,7 @@
             @Model.moTa
         </p>
     </section>
-    <a data-chuc-nang="mo-nut" class="ten">
-        @Model.ten
-    </a>
+    <a data-doi-tuong="ten" data-chuc-nang="mo-nut" class="ten">@Model.ten</a>
     <section class="khung-chuc-nang-lct" style="top: 2px; right: 2px;">
         <ul data-doi-tuong="cncd-@Model.ma">
             <li>
@@ -20,4 +18,5 @@
             <i class="pe-7f-config"></i>
         </button>
     </section>
+    <a class="nut-chon" data-chuc-nang="chon"></a>
 </li>
