--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -7,7 +7,12 @@
 @section Styles {
 }
 @section Scripts {
-    <script src="/QuanLy.js/ChuDe/"></script>
+    <script src="/Khung.js/ChuDe/"></script>
+    <script>
+        $(function () {
+            khoiTaoKhungChuDe($('#khung_quan_ly'));
+        })
+    </script>
 }
 
 <article class="hop">
