--- a/LCTMoodle/Views/ChuDe/Khung/_Cay_HeThong_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_Cay_HeThong_Item.cshtml
@@ -5,9 +5,12 @@
         Chọn phạm vi
     </a>
     <ul data-doi-tuong="danh-sach-muc" class="nut-con">
-        @foreach (Data.PhamVi phamVi in Model)
+        @if (Model != null)
         {
-            @Html.Partial("~/Views/ChuDe/Khung/_Cay_Con_HeThong_Item.cshtml", phamVi)
+            foreach (Data.PhamVi phamVi in Model)
+            {
+                @Html.Partial("~/Views/ChuDe/Khung/_Cay_Con_HeThong_Item.cshtml", phamVi)
+            }   
         }
     </ul>
 </li>
