--- a/LCTMoodle/Views/HoiDap/CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/CauHoi.cshtml
@@ -40,7 +40,7 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </div>
                 <div class="nut-tra-loi">
-                    <a href="#traloi">Trả lời câu hỏi này</a>
+                    <a href="#tra_loi_cau_hoi">Trả lời câu hỏi này</a>
                 </div>
             </section>
 
@@ -55,49 +55,7 @@
 <article class="hop">
     <section class="tieu-de">Danh sách trả lời</section>
     <section class="noi-dung">
-        <article class="tra-loi">
-            <div class="chi-tiet">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-            <div class="thong-tin">
-                <div class="diem">
-                    <i class="pe-7s-angle-up"></i>
-                    <span class="diem-so">5</span>
-                    <i class="pe-7s-angle-down"></i>
-                </div>
-                <div class="thong-tin-them">
-                    <div class="thoi-gian">trả lời lúc <span>24/5/2015</span></div>
-                    <div class="nguoi-dang">bởi <a href="#">NMC</a></div>
-                </div>
-            </div>
-        </article>
-        
-        <article class="tra-loi">
-            <div class="chi-tiet">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-            <div class="thong-tin">
-                <div class="diem">
-                    <i class="pe-7s-angle-up"></i>
-                    <span class="diem-so">5</span>
-                    <i class="pe-7s-angle-down"></i>
-                </div>
-                <div class="thong-tin-them">
-                    <div class="thoi-gian">trả lời lúc <span>24/5/2015</span></div>
-                    <div class="nguoi-dang">bởi <a href="#">NMC</a></div>
-                </div>
-            </div>
-        </article>
+        @Html.Partial("~/Views/HoiDap/_itemTraLoi.cshtml")
     </section>
 </article>
 
@@ -110,17 +68,17 @@
     <section class="noi-dung">
         <article class="hop-form">
             <section class="noi-dung">
+                
                 <form class="lct-form" id="tra_loi_cau_hoi">
                     <article>
                         <ul>
                             <li>
-                                <a id="traloi"></a>
-                                    <section class="noi-dung">
-                                        <article class="input">
-                                            <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung"></textarea>
-                                        </article>
-                                    </section>
-</li>
+                                <section class="noi-dung">
+                                    <article class="input">
+                                        <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung"></textarea>
+                                    </article>
+                                </section>
+                            </li>
                         </ul>
                         <section class="lct-khung-button">
                             <button class="chap-nhan">Trả lời</button>
