--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -289,7 +289,7 @@ body:not(.tai) > .bieu-tuong-tai {
 
 .hop-1-vien > .noi-dung {
     background-color: #fcfcfc;
-    border: 1px solid #eee;    
+    border: 1px solid #ddd;    
 }
 
 .hop {
