--- a/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
@@ -1,6 +1,6 @@
 ﻿<article class="hop hop-1-vien">
     <section class="tieu-de">
-        Danh sách bài tập đã nộp
+        Danh sách bài đã nộp
     </section>
     <section class="noi-dung khung-danh-sach-nop">
         <section class="so-luong">
