--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -32,5 +32,32 @@
     <script src="/Khung.js/BinhLuan/"></script>
 }
 
-<section class="khung-danh-sach-nhom"></section>
+<section id="khung_chon_hien_thi" class="khung-chon-hien-thi">
+    <ul>
+        <li class="khung">
+            <a data-chuc-nang="hien-thi" data-value="khung">
+                <i></i>
+                <span>Tổng quát</span>
+            </a>
+        </li>
+        <li class="bai-giang">
+            <a data-chuc-nang="hien-thi" data-value="baigiang">
+                <i></i>
+                <span>Bài giảng</span>
+            </a>
+        </li>
+        <li class="bai-tap">
+            <a data-chuc-nang="hien-thi" data-value="baitap">
+                <i></i>
+                <span>Bài tập</span>
+            </a>
+        </li>
+        <li class="dien-dan">
+            <a data-chuc-nang="hien-thi" data-value="diendan">
+                <i></i>
+                <span>Diễn đàn</span>
+            </a>
+        </li>
+    </ul>
+</section>
 <section id="khung_hien_thi"></section>
