--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -6,16 +6,16 @@
         <section class="khung-thong-tin">
             <section class="trai">
                 <article class="hinh-dai-dien">
-                    <img src="#" />
+                    <img src="/boy.png/" />
                 </article>
             </section>
             <section class="phai">
                 <section class="nguoi-dung">
-                    <a href="#">Lê Bình Chiêu</a>
+                    <a href="#">@Model.nguoiTao.hoTen</a>
                 </section>
                 <section class="bai-viet">
                     <section class="thoi-gian">
-                        @Model.thoiDiemTao
+                        @Model.thoiDiemTao.Value.ToString("M/yyyy HH:mm")
                     </section>
                 </section>
             </section>
