--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -25,6 +25,46 @@
                 <li>
                     <section class="tieu-de">
                         <label>
+                            Gợi ý
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <article class="input">
+                            <article class="lct-khung-input-goi-y">
+                                <input data-input-type="goi-y" name="name" data-mac-dinh="Mặc định (text)" placeholder="Nhập & chọn" />
+                                <input type="hidden" name="name" />
+                                <section class="khung-danh-sach-goi-y">
+                                    <ul class="danh-sach-goi-y">
+                                        <li>
+                                            <span>content</span>
+                                        </li>
+                                        <li>
+                                            <span>content</span>
+                                        </li>
+                                        <li>
+                                            <span>content</span>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </article>
+                        </article>
+                    </section>
+                </li>
+                <li>
+                    <section class="tieu-de">
+                        <label>
+                            Gợi ý
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <article class="input">
+                            <input data-input-type="goi-y" name="name" data-mac-dinh="Mặc định (text)" placeholder="Nhập & chọn" />
+                        </article>
+                    </section>
+                </li>
+                <li>
+                    <section class="tieu-de">
+                        <label>
                             Chọn chủ đề
                         </label>
                     </section>
