--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var ketQua = DAOLayer.BinhLuanDAO.layTheoDoiTuong((string)ViewData["LoaiDoiTuong"], (int)ViewData["MaDoiTuong"]);
+    var ketQua = BUSLayer.BinhLuanBUS.layTheoDoiTuong((string)ViewData["LoaiDoiTuong"], (int)ViewData["MaDoiTuong"]);
     var danhSachBinhLuan = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BinhLuanViewDTO> : new List<DTOLayer.BinhLuanViewDTO>();
 }
 
@@ -19,8 +19,8 @@
             <ul style="flex-wrap: nowrap; padding: 0; margin: 0;">
                 <li style="margin: 0; width: 100%;">
                     <article class="noi-dung">
-                        <article class="input" style="border-right: 0;">
-                            <input data-validate="bat-buoc" type="text" name="NoiDung" placeholder="Viết bình luận của bạn" />
+                        <article class="input">
+                            <textarea data-validate="bat-buoc" style="height: 20px;" name="NoiDung" placeholder="Viết bình luận của bạn" />
                         </article>
                     </article>
                 </li>
