--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -36,13 +36,13 @@
                                 <section class="khung-danh-sach-goi-y">
                                     <ul class="danh-sach-goi-y">
                                         <li>
-                                            <span>content</span>
+                                            <span data-value="1">content</span>
                                         </li>
                                         <li>
-                                            <span>content</span>
+                                            <span data-value="1">content</span>
                                         </li>
                                         <li>
-                                            <span>content</span>
+                                            <span data-value="1">content</span>
                                         </li>
                                     </ul>
                                 </section>
