--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -69,6 +69,18 @@
                 <li>
                     <section class="tieu-de">
                         <label>
+                            Quản lý khóa học
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <article class="input">
+                            <input data-validate="bat-buoc" data-input-type="goi-y" data-url="/NguoiDung/_GoiY_QuanLyKhoaHoc" name="QuanLy" placeholder="Ai là người quản lý khóa học này?" />
+                        </article>
+                    </section>
+                </li>
+                <li>
+                    <section class="tieu-de">
+                        <label>
                             Khóa học thời hạn
                         </label>
                     </section>
