--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -47,7 +47,7 @@
                         <li><a href="#"><i class="pe-7s-global"></i></a></li>
                         <li>
                             <a href="javascript:void(0)" data-mo-doi-tuong="HopDieuKhien">
-                                <img src="/Content/images/user-avatar.jpg" />
+                                <img src="/LayTapTin/NguoiDung_HinhDaiDien/@nguoiDung.hinhDaiDien.ma" />
                                 <span>@nguoiDung.tenTaiKhoan</span>
                             </a>
                             <div class="hop-dieu-khien" data-doi-tuong="HopDieuKhien">
