--- a/LCTMoodle/Views/NguoiDung/Index.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Index.cshtml
@@ -15,7 +15,7 @@
         <section>
             <article class="khung-tren">
                 <div class="hinh-dai-dien">
-                    <img src="/Content/images/user-avatar-01.jpg" />
+                    <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.hinhDaiDien.ma" />
                 </div>
                 <div class="thong-tin-nguoi-dung">
                     <div class="ten-nguoi-dung">@Model.hoTen</div>
